# nimi-search

./: .gitignore  CMakeLists.txt  README.md
include/: crawler.h  dynamic_array.h
src/: crawler.cpp  main.cpp
tests/: test_crawler.cpp
